--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </nav>
       <ul class="contacts-nav list">
         <li class="item">
-          <a href="mailto:info@devstudio.com" class="link address-link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link address-link mail">info@devstudio.com</a>
         </li>
         <li class="item">
-          <a href="tel:+380961111111" class="link address-link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link address-link tel">+38 096 111 11 11</a>
         </li>
       </ul>
     </div>
@@ -39,7 +39,7 @@
   <main>
 
     <!--Герой-->
-    <section class="hero">
+    <section class="hero hero-bg">
       <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса </h1>
       <a href="" class="hero-button">Заказать услугу</a>
     </section>
@@ -50,6 +50,12 @@
         <h2 hidden>Студия</h2>
         <ul class="feature-list list">
           <li class="item">
+            <div class="feature-box">
+              <svg class="feature-svg">
+                <use href="./images/icons/sprite.svg#antenna ">
+                </use>
+              </svg>
+            </div>
             <h3 class="title">Внимание к деталям</h3>
             <p class="description">
               Идейные соображения, а также начало повседневной работы по
@@ -57,6 +63,12 @@
             </p>
           </li>
           <li class="item">
+            <div class="feature-box">
+              <svg class="feature-svg">
+                <use href="./images/icons/sprite.svg#clock ">
+                </use>
+              </svg>
+            </div>
             <h3 class="title">Пунктуальность</h3>
             <p class="description">
               Задача организации, в особенности же рамки и место обучения кадров
@@ -64,6 +76,12 @@
             </p>
           </li>
           <li class="item">
+            <div class="feature-box">
+              <svg class="feature-svg">
+                <use href="./images/icons/sprite.svg#diagram ">
+                </use>
+              </svg>
+            </div>
             <h3 class="title">Планирование</h3>
             <p class="description">
               Равным образом консультация с широким активом в значительной
@@ -71,6 +89,12 @@
             </p>
           </li>
           <li class="item">
+            <div class="feature-box">
+              <svg class="feature-svg">
+                <use href="./images/icons/sprite.svg#astronaut ">
+                </use>
+              </svg>
+            </div>
             <h3 class="title">Современные технологии</h3>
             <p class="description">
               Значимость этих проблем настолько очевидна, что реализация
@@ -87,13 +111,13 @@
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="portfolio list">
           <li class="item">
-            <img src="./images/services/img-1.png" width="370" height="294" alt="Разметка" />
+            <img src="./images/services/img-1.jpg" width="370" height="294" alt="Разметка" />
           </li>
           <li class="item">
-            <img src="./images/services/img-2.png" width="370" height="294" alt="Дизайн" />
+            <img src="./images/services/img-2.jpg" width="370" height="294" alt="Дизайн" />
           </li>
           <li class="item">
-            <img src="./images/services/img-3.png" width="370" height="294" alt="Подбор цвета" />
+            <img src="./images/services/img-3.jpg" width="370" height="294" alt="Подбор цвета" />
           </li>
         </ul>
       </div>
@@ -108,21 +132,166 @@
             <img src="./images/team/img-1.jpg" width="270" height="260" alt="" />
             <h3 class="team-name">Игорь Демьяненко</h3>
             <p class="team-item description">Product Designer</p>
+            <ul class="list social-icons">
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Instagram">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#instagram"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Twitter">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#twitter"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="facebook">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#facebook"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Linkedin">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#linkedin"></use>
+                  </svg></a>
+              </li>
+            </ul>
           </li>
           <li class="team-item">
             <img src="./images/team/img-2.jpg" width="270" height="260" alt="" />
             <h3 class="team-name">Ольга Репина</h3>
             <p class="team-item description">Frontend Developer</p>
+            <ul class="list social-icons">
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Instagram">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#instagram"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Twitter">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#twitter"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="facebook">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#facebook"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Linkedin">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#linkedin"></use>
+                  </svg></a>
+              </li>
+            </ul>
           </li>
           <li class="team-item">
             <img src="./images/team/img-3.jpg" width="270" height="260" alt="" />
             <h3 class="team-name">Николай Тарасов</h3>
             <p class="team-item description">Marketing</p>
+            <ul class="list social-icons">
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Instagram">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#instagram"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Twitter">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#twitter"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="facebook">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#facebook"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Linkedin">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#linkedin"></use>
+                  </svg></a>
+              </li>
+            </ul>
           </li>
           <li class="team-item">
             <img src="./images/team/img-4.jpg" width="270" height="260" alt="" />
             <h3 class="team-name">Михаил Ермаков</h3>
             <p class="team-item description">UI Designer</p>
+            <ul class="list social-icons">
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Instagram">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#instagram"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Twitter">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#twitter"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="facebook">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#facebook"></use>
+                  </svg></a>
+              </li>
+              <li class="social-icons-item">
+                <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Linkedin">
+                  <svg class="social-icons-svg">
+                    <use href="./images/icons/sprite.svg#linkedin"></use>
+                  </svg></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Постоянные клиенты</h2>
+        <ul class="list clients">
+          <li class="item">
+            <div class="clients-box"><svg class="clients-svg">
+                <use href="./images/icons/sprite.svg#yanco"> </use>
+              </svg>
+            </div>
+          </li>
+          <li class="item">
+            <div class="clients-box"><svg class="clients-svg">
+                <use href="./images/icons/sprite.svg#tagline"> </use>
+              </svg></div>
+          </li>
+          <li class="item">
+            <div class="clients-box"><svg class="clients-svg">
+                <use href="./images/icons/sprite.svg#company"> </use>
+              </svg></div>
+          </li>
+          <li class="item">
+            <div class="clients-box"><svg class="clients-svg">
+                <use href="./images/icons/sprite.svg#foster"> </use>
+              </svg></div>
+          </li>
+          <li class="item">
+            <div class="clients-box"><svg class="clients-svg">
+                <use href="./images/icons/sprite.svg#brand"> </use>
+              </svg>
+            </div>
+          </li>
+          <li class="item">
+            <div class="clients-box"><svg class="clients-svg">
+                <use href="./images/icons/sprite.svg#tagline"> </use>
+              </svg>
+            </div>
           </li>
         </ul>
       </div>
