--- a/Studio.html
+++ b/Studio.html
@@ -27,10 +27,18 @@
             </nav>
             <ul class="contacts-nav list">
                 <li class="item">
-                    <a href="mailto:info@devstudio.com" class="link address-link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="link address-link">
+                        <svg class="link svg-envelope">
+                            <use href="./images/icons/sprite.svg#envelope ">
+                            </use>
+                        </svg>info@devstudio.com</a>
                 </li>
                 <li class="item">
-                    <a href="tel:+380961111111" class="link address-link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="link address-link">
+                        <svg class="svg-telephone">
+                            <use href="./images/icons/sprite.svg#smartphone ">
+                            </use>
+                        </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
