--- a/index.html
+++ b/index.html
@@ -28,10 +28,18 @@
       </nav>
       <ul class="contacts-nav list">
         <li class="item">
-          <a href="mailto:info@devstudio.com" class="link address-link mail">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link address-link">
+            <svg class="link svg-envelope">
+              <use href="./images/icons/sprite.svg#envelope ">
+              </use>
+            </svg>info@devstudio.com</a>
         </li>
         <li class="item">
-          <a href="tel:+380961111111" class="link address-link tel">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link address-link tel">
+            <svg class="svg-telephone">
+              <use href="./images/icons/sprite.svg#smartphone ">
+              </use>
+            </svg>+38 096 111 11 11</a>
         </li>
       </ul>
     </div>
@@ -256,6 +264,7 @@
       </div>
     </section>
 
+    <!-- Постоянные клиенты -->
     <section class="section">
       <div class="container">
         <h2 class="section-title">Постоянные клиенты</h2>
@@ -299,21 +308,53 @@
   </main>
   <!--Секция подвал-->
   <footer class="footer padding-footer">
-    <div class="container">
-      <a href="./index.html" class="link item"> <span class="logo">Web</span><span
-          class="logo white-logo">Studio</span></a>
-      <address>
-        <ul class="footer-address list">
-          <li class="item">
-            <a href="https://goo.gl/maps/mCpDXbgMNV3ADm6YA" class="footer footer-address" target="blank"
-              rel="noopener noreferer">
-              г. Киев, пр-т Леси Украинки, 26</a>
+    <div class="container flex-footer">
+      <div class="addresses">
+        <a href="./index.html" class="link item"> <span class="logo">Web</span><span
+            class="logo white-logo">Studio</span></a>
+        <address>
+          <ul class="footer-address list">
+            <li class="item">
+              <a href="https://goo.gl/maps/mCpDXbgMNV3ADm6YA" class="footer footer-address" target="blank"
+                rel="noopener noreferer">
+                г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li class="item"><a href="mailto:info@example.com" class="footer footer-contacts">info@example.com</a></li>
+            <li class="item"><a href="tel:+380441111111" class="footer footer-contacts  ">+38 044 111 11
+                11</a></li>
+
+          </ul>
+        </address>
+      </div>
+      <div class="join-us">
+        <h3 class="join-section">Присоединяйтесь</h3>
+        <ul class="list social-icons">
+          <li class="social-icons-item">
+            <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Instagram">
+              <svg class="social-icons-svg">
+                <use href="./images/icons/sprite.svg#instagram"></use>
+              </svg></a>
           </li>
-          <li class="item"><a href="mailto:info@example.com" class="footer footer-contacts">info@example.com</a></li>
-          <li class="item"><a href="tel:+380441111111" class="footer footer-contacts  ">+38 044 111 11
-              11</a></li>
+          <li class="social-icons-item">
+            <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Twitter">
+              <svg class="social-icons-svg">
+                <use href="./images/icons/sprite.svg#twitter"></use>
+              </svg></a>
+          </li>
+          <li class="social-icons-item">
+            <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="facebook">
+              <svg class="social-icons-svg">
+                <use href="./images/icons/sprite.svg#facebook"></use>
+              </svg></a>
+          </li>
+          <li class="social-icons-item">
+            <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Linkedin">
+              <svg class="social-icons-svg">
+                <use href="./images/icons/sprite.svg#linkedin"></use>
+              </svg></a>
+          </li>
         </ul>
-      </address>
+      </div>
     </div>
   </footer>
 </body>
