--- a/Studio.html
+++ b/Studio.html
@@ -128,24 +128,60 @@
     </section>
 
     <!--Секция подвал-->
-    <footer class="footer">
-        <div class="div-footer container">
-            <a href="./index.html" class="link"> <span class="logo">Web</span><span
-                    class="logo white-logo">Studio</span></a>
-            <address>
-                <ul class="footer-address list">
-                    <li class="item">
-                        <a href="https://goo.gl/maps/mCpDXbgMNV3ADm6YA" class="footer footer-address" target="blank"
-                            rel="noopener noreferer">
-                            г. Киев, пр-т Леси Украинки, 26</a>
+    <footer class="div-footer footer">
+        <div class="container flex-footer">
+            <div class="addresses">
+                <a href="./index.html" class="link"> <span class="logo">Web</span><span
+                        class="logo white-logo">Studio</span></a>
+                <address>
+                    <ul class="footer-address list">
+                        <li class="item">
+                            <a href="https://goo.gl/maps/mCpDXbgMNV3ADm6YA" class="footer footer-address" target="blank"
+                                rel="noopener noreferer">
+                                г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="item"><a href="mailto:info@example.com"
+                                class="footer footer-contacts">info@example.com</a>
+                        </li>
+                        <li class="item"><a href="tel:+380441111111" class="footer footer-contacts  ">+38 044 111 11
+                                11</a></li>
+                    </ul>
+                </address>
+            </div>
+
+            <div class="join-us">
+                <h3 class="join-section">Присоединяйтесь</h3>
+                <ul class="list social-icons">
+                    <li class="social-icons-item">
+                        <a class="social-icons-link-footer" href="" target="_blank" rel="noopener noreferer"
+                            aria-label="Instagram">
+                            <svg class="social-icons-svg-footer">
+                                <use href="./images/icons/sprite.svg#instagram"></use>
+                            </svg></a>
                     </li>
-                    <li class="item"><a href="mailto:info@example.com"
-                            class="footer footer-contacts">info@example.com</a>
+                    <li class="social-icons-item">
+                        <a class="social-icons-link-footer" href="" target="_blank" rel="noopener noreferer"
+                            aria-label="Twitter">
+                            <svg class="social-icons-svg-footer">
+                                <use href="./images/icons/sprite.svg#twitter"></use>
+                            </svg></a>
                     </li>
-                    <li class="item"><a href="tel:+380441111111" class="footer footer-contacts  ">+38 044 111 11
-                            11</a></li>
+                    <li class="social-icons-item">
+                        <a class="social-icons-link-footer" href="" target="_blank" rel="noopener noreferer"
+                            aria-label="facebook">
+                            <svg class="social-icons-svg-footer">
+                                <use href="./images/icons/sprite.svg#facebook"></use>
+                            </svg></a>
+                    </li>
+                    <li class="social-icons-item">
+                        <a class="social-icons-link-footer" href="" target="_blank" rel="noopener noreferer"
+                            aria-label="Linkedin">
+                            <svg class="social-icons-svg-footer">
+                                <use href="./images/icons/sprite.svg#linkedin"></use>
+                            </svg></a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
