--- a/index.html
+++ b/index.html
@@ -322,7 +322,6 @@
             <li class="item"><a href="mailto:info@example.com" class="footer footer-contacts">info@example.com</a></li>
             <li class="item"><a href="tel:+380441111111" class="footer footer-contacts  ">+38 044 111 11
                 11</a></li>
-
           </ul>
         </address>
       </div>
@@ -330,26 +329,26 @@
         <h3 class="join-section">Присоединяйтесь</h3>
         <ul class="list social-icons">
           <li class="social-icons-item">
-            <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Instagram">
-              <svg class="social-icons-svg">
+            <a class="social-icons-link-footer" href="" target="_blank" rel="noopener noreferer" aria-label="Instagram">
+              <svg class="social-icons-svg-footer">
                 <use href="./images/icons/sprite.svg#instagram"></use>
               </svg></a>
           </li>
           <li class="social-icons-item">
-            <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Twitter">
-              <svg class="social-icons-svg">
+            <a class="social-icons-link-footer" href="" target="_blank" rel="noopener noreferer" aria-label="Twitter">
+              <svg class="social-icons-svg-footer">
                 <use href="./images/icons/sprite.svg#twitter"></use>
               </svg></a>
           </li>
           <li class="social-icons-item">
-            <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="facebook">
-              <svg class="social-icons-svg">
+            <a class="social-icons-link-footer" href="" target="_blank" rel="noopener noreferer" aria-label="facebook">
+              <svg class="social-icons-svg-footer">
                 <use href="./images/icons/sprite.svg#facebook"></use>
               </svg></a>
           </li>
           <li class="social-icons-item">
-            <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Linkedin">
-              <svg class="social-icons-svg">
+            <a class="social-icons-link-footer" href="" target="_blank" rel="noopener noreferer" aria-label="Linkedin">
+              <svg class="social-icons-svg-footer">
                 <use href="./images/icons/sprite.svg#linkedin"></use>
               </svg></a>
           </li>
