--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <li class="team-item">
             <img src="./images/team/img-1.jpg" width="270" height="260" alt="" />
             <h3 class="team-name">Игорь Демьяненко</h3>
-            <p class="team-item description">Product Designer</p>
+            <p class="description">Product Designer</p>
             <ul class="list social-icons">
               <li class="social-icons-item">
                 <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Instagram">
@@ -170,7 +170,7 @@
           <li class="team-item">
             <img src="./images/team/img-2.jpg" width="270" height="260" alt="" />
             <h3 class="team-name">Ольга Репина</h3>
-            <p class="team-item description">Frontend Developer</p>
+            <p class="description">Frontend Developer</p>
             <ul class="list social-icons">
               <li class="social-icons-item">
                 <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Instagram">
@@ -201,7 +201,7 @@
           <li class="team-item">
             <img src="./images/team/img-3.jpg" width="270" height="260" alt="" />
             <h3 class="team-name">Николай Тарасов</h3>
-            <p class="team-item description">Marketing</p>
+            <p class="description">Marketing</p>
             <ul class="list social-icons">
               <li class="social-icons-item">
                 <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Instagram">
@@ -232,7 +232,7 @@
           <li class="team-item">
             <img src="./images/team/img-4.jpg" width="270" height="260" alt="" />
             <h3 class="team-name">Михаил Ермаков</h3>
-            <p class="team-item description">UI Designer</p>
+            <p class="description">UI Designer</p>
             <ul class="list social-icons">
               <li class="social-icons-item">
                 <a class="social-icons-link" href="" target="_blank" rel="noopener noreferer" aria-label="Instagram">
