--- a/Studio.html
+++ b/Studio.html
@@ -20,7 +20,7 @@
                     <li><a href="./index.html" class="link item"><span class="logo">Web</span><span
                                 class="logo black-logo">Studio</span></a>
                     </li>
-                    <li class="item"><a href="" class="link link-primary">Студия</a></li>
+                    <li class="item"><a href="./index.html" class="link link-primary">Студия</a></li>
                     <li class="item"><a href="" class="link link-secondary">Портфолио</a></li>
                     <li class="item"><a href="" class="link link-primary">Контакты</a></li>
                 </ul>
